[project]
name = "ros_monitor"
version = "0.1.0"
description = "A TUI for monitoring ROS 2 topics and messages. Inspired by cyber_monitor."
authors = [
    { name = "Aditya Srinivas Manohar", email = "adityasrinivasmanohar@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "textual",
    "pyyaml",
    "numpy",
    "ruff",
    "pytest",
]

[project.scripts]
ros_monitor = "ros_monitor.main:main"

[tool.setuptools.packages.find]
where = ["ros_monitor"]

[tool.pytest.ini_options]
testpaths = ["ros_monitor/tests"]

[tool.ruff]
exclude = [
    "logs",
    "__pycache__",
    ".venv",
    "venv",
    ".ruff_cache"
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "G004",
    "ANN401"
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
